# engineered-wood

./: .gitignore  LICENSE  README.md  engineered-wood.slnx
doc/: codec-seam-investigation.md  known-issues.md  pr4-to-master-migration.md  row-tracking-conformance-brief.md  slice9-concurrency-resume.md  upstream-landing-notes.md
src/: Directory.Build.props
src/EngineeredWood.AWS/: EngineeredWood.AWS.csproj  S3RandomAccessFile.cs  S3SequentialFile.cs
src/EngineeredWood.Avro/: AvroAsyncReader.cs  AvroAsyncWriter.cs  AvroCodec.cs  AvroCompression.cs  AvroDecoder.cs  AvroEncoder.cs  AvroReader.cs  AvroReaderBuilder.cs  AvroSchema.cs  AvroWireFormat.cs  AvroWriter.cs  AvroWriterBuilder.cs  EncodedRows.cs  EngineeredWood.Avro.csproj  FingerprintStrategy.cs  SchemaFingerprint.cs  SchemaStore.cs
src/EngineeredWood.Aws/: S3RandomAccessFile.cs  S3SequentialFile.cs  S3TableFileSystem.cs
src/EngineeredWood.Azure/: AzureBlobRandomAccessFile.cs  AzureBlobSequentialFile.cs  AzureTableFileSystem.cs
src/EngineeredWood.Core/: EngineeredWood.Core.csproj
src/EngineeredWood.DeltaLake.Table/: CompactionOptions.cs  DeltaFilePruner.cs  DeltaTable.cs  DeltaTableOptions.cs  DeltaTransaction.cs  DeltaWriteMode.cs  EngineeredWood.DeltaLake.Table.csproj  IDataFileReader.cs  IDataFileWriter.cs  IsolationLevel.cs  RecordBatchStreams.cs  SchemaEvolution.cs  VacuumResult.cs  VariantColumnCoercion.cs  VariantTransport.cs  WrittenDataFile.cs
test/EngineeredWood.Vortex.Tests/Rust/: Cargo.toml
test/EngineeredWood.Vortex.Tests/Rust/src/: main.rs  validator.rs
(+712 files in other folders)
